GG-34220 Extract jvm options to separate scripts