@@ -42,6 +42,7 @@ fi
 SCRIPTS_HOME="${IGNITE_HOME_TMP}/bin"
 
 source "${SCRIPTS_HOME}"/include/functions.sh
+source "${SCRIPTS_HOME}"/include/jvmdefaults.sh
 
 #
 # Discover path to Java executable and check it's version.
@@ -135,49 +136,7 @@ fi
 #
 # Final JVM_OPTS for Java 9+ compatibility
 #
-if [ $version -eq 8 ] ; then
-    JVM_OPTS="\
-        -XX:+AggressiveOpts \
-         ${JVM_OPTS}"
-
-elif [ $version -gt 8 ] && [ $version -lt 11 ]; then
-    JVM_OPTS="\
-        -XX:+AggressiveOpts \
-        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --illegal-access=permit \
-        --add-modules=java.xml.bind \
-        ${JVM_OPTS}"
-
-elif [ "${version}" -ge 11 ] && [ "${version}" -lt 15 ]; then
-    JVM_OPTS="\
-        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-        --illegal-access=permit \
-        ${JVM_OPTS}"
-
-elif [ "${version}" -ge 15 ] ; then
-    JVM_OPTS="\
-        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-        --add-opens=java.base/java.io=ALL-UNNAMED \
-        --add-opens=java.base/java.nio=ALL-UNNAMED \
-        --add-opens=java.base/java.util=ALL-UNNAMED \
-        --add-opens=java.base/java.lang=ALL-UNNAMED \
-        ${JVM_OPTS}"
-fi
-
+JVM_OPTS=$(getJavaSpecificOpts $version $JVM_OPTS)
 
 ERRORCODE="-1"
 
