@@ -42,6 +42,7 @@ fi
 SCRIPTS_HOME="${IGNITE_HOME_TMP}/bin"
 
 source "${SCRIPTS_HOME}"/include/functions.sh
+source "${SCRIPTS_HOME}"/include/jvmdefaults.sh
 
 #
 # Discover path to Java executable and check it's version.
@@ -109,42 +110,7 @@ fi
 #
 # Final CONTROL_JVM_OPTS for Java 9+ compatibility
 #
-if [ "$version" -gt 8 ] && [ "$version" -lt 11 ]; then
-    CONTROL_JVM_OPTS="\
-        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --illegal-access=permit \
-        --add-modules=java.xml.bind \
-        ${CONTROL_JVM_OPTS}"
-
-elif [ "${version}" -ge 11 ] && [ "${version}" -lt 15 ]; then
-    CONTROL_JVM_OPTS="\
-        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-        --illegal-access=permit \
-        ${CONTROL_JVM_OPTS}"
-
-elif [ "${version}" -ge 15 ] ; then
-    CONTROL_JVM_OPTS="\
-        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
-        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
-        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-        --add-opens=java.base/java.io=ALL-UNNAMED \
-        --add-opens=java.base/java.nio=ALL-UNNAMED \
-        --add-opens=java.base/java.util=ALL-UNNAMED \
-        --add-opens=java.base/java.lang=ALL-UNNAMED \
-        ${CONTROL_JVM_OPTS}"
-fi
+CONTROL_JVM_OPTS=$(getJavaSpecificOpts $version $CONTROL_JVM_OPTS)
 
 if [ -n "${JVM_OPTS}" ] ; then
   echo "JVM_OPTS environment variable is set, but will not be used. To pass JVM options use CONTROL_JVM_OPTS"
